raffia/tests/error/value/calc/double-operator.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ double-operator.css:1:17
  │
1 │ a {b: calc(1px ** 2px)}
  │                 ^


